Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2148

Selective pixel size rule in FontConfig affects all fonts in Qt

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.4.0
    • GUI: Font handling
    • None
    • 429f0507a68f4aa686449308af770ce5cf2c913f

      Consider the following rule for FontConfig:

      <match target="font">
      <test compare="eq" name="family" qual="any" >
      <string>ar pl kaitim big5</string>
      <string>ar pl kaitim gb</string>
      <string>ar pl zenkai uni</string>
      <string>ar pl mingti2l big5</string>
      <string>ar pl sungtil gb</string>
      </test>
      <test compare="less" name="pixelsize" qual="all" >
      <double>18</double>
      </test>
      <edit mode="assign_replace" name="pixelsize" >
      <double>18</double>
      </edit>
      </match>

      The expected result is that text rendered with any of the above fonts, requesting a pixel size less than 18, uses a pixel size of 18 instead.

      The actual result is that text rendered with any font requesting a pixel size less than 18, uses a pixel size of 18 instead.

      Note that the problem does not occur with Gtk applications, where the rule is only applied to the matching fonts, not all fonts.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jiang Jiang Jiang
            sthomass Stian Sandvik Thomassen (closed Nokia identity) (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes